infra/kube-prometheus-stack/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: grafana-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
        - name: authentik-proxy-provider
          namespace: traefik
      kind: Rule
      services:
        - name: prometheus-alertmanager
          port: 9093
  tls:
    secretName: alertmanager-tls

---
kind: Service
apiVersion: v1
metadata:
  name: grafana-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.durp.info
spec:
  type: ExternalName
  externalName: durp.info

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
        - name: authentik-proxy-provider
          namespace: traefik
      kind: Rule
      services:
        - name: prometheus-prometheus
          port: 9090
  tls:
    secretName: prometheus-tls

---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.durp.info
spec:
  type: ExternalName
  externalName: durp.info
